--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,105 @@
-#title {
+* {
+    margin: 0;
+    padding: 0;
+}
+
+/* general styling */
+body {
+    background-color: #718792;
+}
+
+p {
+    text-align: center;
+}
+
+/* header */
+header {
+    background-color: #ede2e2;
+    height: 5rem;
+}
+
+.title {
     display: inline-block;
+    padding-top: 1rem;
+}
+
+#title-one {
+    padding-left: 1rem;
 }
 
 #score {
     float: right;
+    padding-right: 1rem;
+    padding-top: 1rem;
+
+}
+
+
+
+/* category area */
+#category-area {
+    background-color: #ede2e2;
+    margin: 8vh 8vw;
+    padding: 1rem;
+}
+
+#choose-cat {
+    margin: 1rem 1rem 2rem;
 }
 
 span p {
     display: inline-block;
+}
+
+#cats-a, #cats-b {
+    margin: 0 30%;
+    /* position: relative; */
+    /* justify-items: center;
+    overflow: hidden; */
+}
+
+div span {
+    display: inline-flex;
+    max-width: 10rem;
+    padding: 1em;
+}
+
+/* category colours */
+.cat1 {
+    background-color: rgba(255, 242, 0, 0.3);
+    border: 2px solid rgb(255, 242, 0);
+    border-radius: 5px;
+}
+.cat2 {
+    background-color: rgba(168, 0, 255, 0.3);
+    border: 2px solid rgb(168, 0, 255);
+    border-radius: 5px;
+}
+.cat3 {
+    background-color: rgba(0, 0, 255, 0.3);
+    border: 2px solid rgb(0, 0, 255);
+    border-radius: 5px;
+}
+.cat4 {
+    background-color: rgba(0, 255, 114, 0.3);
+    border: 2px solid rgb(0, 255, 114);
+    border-radius: 5px;
+}
+.cat5 {
+    background-color: rgba(255, 0, 72, 0.3);
+    border: 2px solid rgb(255, 0, 72);
+    border-radius: 5px;
+}
+.cat6 {
+    background-color: rgba(255, 144, 0, 0.3);
+    border: 2px solid rgb(255, 144, 0);
+    border-radius: 5px;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    background-color: #ede2e2;
+    height: 3rem;
+    width: 100%;
 }
