--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ h1, h2 {
     color: #1c313a;
 }
 
-/* header */
+/* header both pages */
 header {
     background-color: #ede2e2;
     height: 5rem;
@@ -32,7 +32,7 @@ header {
 }
 
 #title-one {
-    padding-left: 3rem;
+    padding-left: 2rem;
 }
 
 #title-two {
@@ -55,17 +55,19 @@ header {
 }
 #categories-btn a {
     text-decoration: none;
+    color: #1c313a;
+    padding: 0.5rem;
 }
 
-/* category area */
-#category-area {
+/* game area both pages */
+.game-area {
     background-color: #ede2e2;
     margin: 8vh 6vw;
     padding: 1rem 0 3rem;
     border-radius: 2rem;
 }
 
-#choose-cat {
+#choose-cat, #question {
     text-align: center;
     margin: 1rem 1rem 2rem;
     font-size: 1.5em;
@@ -75,7 +77,7 @@ span p {
     display: inline-block;
 }
 
-#cats-a, #cats-b {
+#cats-a, #cats-b, #qs-one, #qs-two {
     margin: 0 15vw;
     display: flex;
     justify-content: space-around;
@@ -95,32 +97,49 @@ div span {
     border: 2px solid rgb(255, 242, 0);
     border-radius: 0.75rem;
 }
+
 .cat2 {
     background-color: rgba(168, 0, 255, 0.3);
     border: 2px solid rgb(168, 0, 255);
     border-radius: 0.75rem;
 }
+
 .cat3 {
     background-color: rgba(0, 0, 255, 0.3);
     border: 2px solid rgb(0, 0, 255);
     border-radius: 0.75rem;
 }
+
 .cat4 {
     background-color: rgba(0, 255, 114, 0.3);
     border: 2px solid rgb(0, 255, 114);
     border-radius: 0.75rem;
 }
+
 .cat5 {
     background-color: rgba(255, 0, 72, 0.3);
     border: 2px solid rgb(255, 0, 72);
     border-radius: 0.75rem;
 }
+
 .cat6 {
     background-color: rgba(255, 144, 0, 0.3);
     border: 2px solid rgb(255, 144, 0);
     border-radius: 0.75rem;
 }
 
+.cat-btn:hover, .answer-btn:hover {
+    transform: scale(1.04);
+    cursor: pointer;
+}
+
+/* answer buttons */
+.answer-btn {
+    border: 2px solid;
+    border-radius: 0.75rem;
+}
+
+/* footer both pages */
 footer {
     position: absolute;
     bottom: 0;
