--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,6 +91,11 @@ div span {
     margin: 3rem auto;
 }
 
+.btn {
+    text-decoration: none;
+    color: #1c313a;
+}
+
 /* category colours */
 .cat1 {
     background-color: rgba(255, 242, 0, 0.3);
