--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap');
 
 * {
     margin: 0;
@@ -7,6 +8,9 @@
 
 /* general styling */
 body {
+    background-image: url(../images/backgroundimg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     background-color: #718792;
 }
 
@@ -14,6 +18,7 @@ p {
     text-align: center;
     font-family: 'Quicksand', sans-serif;
     font-size: 1.2em;
+    font-weight: 600;
 }
 
 h1, h2 {
@@ -39,11 +44,14 @@ header {
     font-size: 3em;
 }
 
-#prev-score {
+#prev-span {
     float: right;
     padding-right: 1.5rem;
     padding-top: 1.5rem;
+}
 
+#prev-span h2 {
+    display: inline-block;
 }
 
 #categories-btn {
@@ -56,7 +64,7 @@ header {
 #categories-btn a {
     text-decoration: none;
     color: #1c313a;
-    padding: 0.5rem;
+    margin: 2rem;
 }
 
 
@@ -70,7 +78,7 @@ header {
 
 /* game area both pages */
 .game-area {
-    background-color: #ede2e2;
+    background-color: rgba(237, 226, 226, 0.95);
     margin: 8vh 6vw;
     padding: 1rem 0 3rem;
     border-radius: 2rem;
@@ -132,37 +140,37 @@ div span {
 
 /* category colours */
 #cat1 {
-    background-color: rgba(255, 242, 0, 0.3);
+    background-color: rgba(255, 242, 0, 0.5);
     border: 2px solid rgb(255, 242, 0);
     border-radius: 0.75rem;
 }
 
 #cat2 {
-    background-color: rgba(168, 0, 255, 0.3);
+    background-color: rgba(168, 0, 255, 0.5);
     border: 2px solid rgb(168, 0, 255);
     border-radius: 0.75rem;
 }
 
 #cat3 {
-    background-color: rgba(0, 0, 255, 0.3);
+    background-color: rgba(0, 0, 255, 0.5);
     border: 2px solid rgb(0, 0, 255);
     border-radius: 0.75rem;
 }
 
 #cat4 {
-    background-color: rgba(0, 255, 114, 0.3);
+    background-color: rgba(0, 255, 114, 0.5);
     border: 2px solid rgb(0, 255, 114);
     border-radius: 0.75rem;
 }
 
 #cat5 {
-    background-color: rgba(255, 0, 72, 0.3);
+    background-color: rgba(255, 0, 72, 0.5);
     border: 2px solid rgb(255, 0, 72);
     border-radius: 0.75rem;
 }
 
 #cat6 {
-    background-color: rgba(255, 144, 0, 0.3);
+    background-color: rgba(252, 181, 88, 0.5);
     border: 2px solid rgb(255, 144, 0);
     border-radius: 0.75rem;
 }
@@ -174,10 +182,68 @@ div span {
 
 /* answer buttons */
 .answer-btn {
-    /* border: 2px solid; */
-    border-width: 2px;
-    border-style: solid;
+    border: 2px solid #1c313a;
     border-radius: 0.75rem;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 1.2em;
+    font-weight: 600;
+    color: #1c313a;
+}
+
+#score-modal {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	padding-top: 100px;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgba(113, 135, 146, 0.3);
+}
+
+#modal-content {
+	background-color: #ede2e2;
+	margin: auto;
+	padding: 20px;
+	border: 1px solid #718792;
+	border-radius: 0.75rem;
+	width: 80%;
+    height: 35%;
+}
+
+#modal-close {
+	color: #718792;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+    width: auto;
+    padding: 0 1rem;
+    margin: 0;
+}
+
+#modal-close:hover, #modal-close:focus {
+	color: #1c313a;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+#modal-message {
+    padding-top: 6vh;
+    color: #1c313a;
+    font-weight: 600;
+    width: auto;
+    display: flex;
+}
+
+#modal-message p {
+    font-size: 2em;
+}
+
+#modal-score {
+    padding-left: 0.5em;
+    color: limegreen;
 }
 
 /* to be applied by javascript */
@@ -191,11 +257,16 @@ div span {
 
 /* footer both pages */
 footer {
-    position: fixed;
-    bottom: 0;
+    /* position: fixed; */
+    /* bottom: 0; */
     background-color: #ede2e2;
     height: 3rem;
-    width: 100%;
+    width: 10rem;
+    border-radius: 0.75rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
 }
 
 footer a {
