--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -334,3 +334,40 @@ footer a {
         transform: none;
     }
 }
+
+@media screen and (max-width: 790px) {
+    .btn {
+        margin: -0.5rem 2.5rem;
+    }
+    div span {
+        margin: 2rem auto;
+    }
+    #qs-one, #qs-two {
+        margin: 0 5vw;
+    }
+    #quit-btn a {
+        margin: auto 1rem;
+    }
+}
+
+@media screen and (max-width: 690px) {
+    .btn {
+        margin: -0.5rem 1rem;
+    }
+    #choose-cat, #question {
+        font-size: 1.25rem;
+    }
+    #modal-content {
+        height: 30%;
+    }
+    #modal-message p {
+        font-size: 1.75em;
+    }
+}
+
+@media screen and (max-width: 585px) {
+    #qs-one, #qs-two {
+        display: block;
+        text-align: center;
+    }
+}
